--- a/sft.yaml
+++ b/sft.yaml
@@ -18,27 +18,27 @@ stage: sft
 do_train: true
 finetuning_type: lora
 lora_target: all
-lora_rank: 96 # 64 # 64 # 96
+lora_rank: 256
 lora_alpha: 16
 lora_dropout: 0.0
 use_rslora: true
 
 ### dataset
-dataset: x3
+dataset: x2
 template: llama3
 packing: true
 neat_packing: true
-cutoff_len: 16384 # 8192 # 32768 # 16384 # 24576 # 32768 # 16384 # 32768 # 10240 # 32768 # 10240 # 16384 # 8192 # 32768
+cutoff_len: 16384 # 8192 # 16384 # 24576 # 10240 # 32768 
 preprocessing_num_workers: 24
 
 ### train
 num_train_epochs: 1.0
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 1
-learning_rate: 0.00003
-lr_scheduler_type: constant_with_warmup # constant # cosine # constant_with_warmup
-optim: adamw_8bit # adamw_torch | adamw_8bit
-warmup_steps: 300
+learning_rate: 0.00005
+lr_scheduler_type: constant_with_warmup # constant | cosine | constant_with_warmup
+optim: adamw_torch # adamw_torch | adamw_8bit
+warmup_steps: 200
 # warmup_ratio: 0.1
 flash_attn: fa2
 #bf16: true
@@ -47,7 +47,7 @@ fp16: true
 ### output
 output_dir: /home/exported
 logging_steps: 1
-save_steps: 300
+save_steps: 500
 
 ### eval
 # val_size: 0 # 0.1
