--- a/sft.yaml
+++ b/sft.yaml
@@ -1,7 +1,7 @@
 ### gotzmann
-# use_unsloth: false # true # just for ONE card
-enable_liger_kernel: true # works with FSDP
-# upcast_layernorm: false # true # FSDP: Must flatten tensors with uniform dtype
+use_unsloth: true # just for ONE card
+#enable_liger_kernel: true # works with FSDP
+#upcast_layernorm: true # FSDP: Must flatten tensors with uniform dtype
 
 ### resume if needed ?
 # ignore_data_skip: true
@@ -36,13 +36,12 @@ preprocessing_num_workers: 48
 num_train_epochs: 1.0
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 2
+lr_scheduler_type: cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
 learning_rate: 0.00008
 min_lr: 0.00002
-weight_decay: 0.001
-lr_scheduler_type: cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
+#weight_decay: 0.001
 warmup_steps: 100
-flash_attn: fa2
 bf16: true # fp16 | bf16
 
 ### output
@@ -51,6 +50,7 @@ logging_steps: 1
 save_steps: 300
 
 ### etc
+flash_attn: fa2
 gradient_checkpointing: true
 max_grad_norm: 1.0
 ddp_timeout: 180000000
