--- a/sft.yaml
+++ b/sft.yaml
@@ -44,7 +44,7 @@ learning_rate: 0.00008
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
 weight_decay: 0.00001 # FIXME
 warmup_steps: 100
-bf16: true # fp16 | bf16
+#bf16: true # fp16 | bf16
 
 ### output
 output_dir: /home/exported
