--- a/sft.yaml
+++ b/sft.yaml
@@ -4,7 +4,7 @@
 ### gotzmann
 enable_liger_kernel: true # works with FSDP
 #use_unsloth: true # just for ONE card
-#upcast_layernorm: true # FSDP: Must flatten tensors with uniform dtype
+upcast_layernorm: true # FSDP: Must flatten tensors with uniform dtype
 upcast_lmhead_output: true
 
 ### resume if needed ?
