--- a/sft.yaml
+++ b/sft.yaml
@@ -60,7 +60,7 @@ ddp_timeout: 180000000
 ddp_find_unused_parameters: false # False for LoRA in DDP training
 overwrite_cache: true
 overwrite_output_dir: true
-plot_loss: false
+#plot_loss: false
 
 # use_fast_tokenizer: false
 # loraplus_lr_ratio: 4.0
