--- a/fsdp.yaml
+++ b/fsdp.yaml
@@ -8,11 +8,11 @@ fsdp_config:
   fsdp_auto_wrap_policy: TRANSFORMER_BASED_WRAP
   fsdp_backward_prefetch: BACKWARD_PRE
   fsdp_forward_prefetch: false
-  fsdp_cpu_ram_efficient_loading: true
+  fsdp_cpu_ram_efficient_loading: false # true
+  fsdp_sync_module_states: false # true
   fsdp_offload_params: false # offload may affect training speed
   fsdp_sharding_strategy: FULL_SHARD
   fsdp_state_dict_type: FULL_STATE_DICT # FULL_STATE_DICT # SHARDED_STATE_DICT | FULL_STATE_DICT
-  fsdp_sync_module_states: true
   fsdp_use_orig_params: true # For FSDP, when using torch.compile please set True
 machine_rank: 0
 main_training_function: main
