--- a/sft.yaml
+++ b/sft.yaml
@@ -5,9 +5,10 @@
 # [ lm_head ] with [ liger_kernel ] RuntimeError: size mismatch, got input (1), mat (1x4096), vec (65667072)
 
 ### gotzmann
-#enable_liger_kernel: true # works with FSDP
-use_unsloth: true # just for ONE card
-upcast_layernorm: true # FSDP: Must flatten tensors with uniform dtype
+enable_liger_kernel: true # works with FSDP
+#use_unsloth: true # just for ONE card
+#use_unsloth_gc: true # use unsloth's gradient checkpointing
+#upcast_layernorm: true # FSDP: Must flatten tensors with uniform dtype
 #upcast_lmhead_output: true
 
 ### resume if needed ?
@@ -41,14 +42,14 @@ preprocessing_num_workers: 48
 ### train
 num_train_epochs: 1.0
 per_device_train_batch_size: 1
-gradient_accumulation_steps: 2
-lr_scheduler_type: cosine # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.00008
+gradient_accumulation_steps: 4
+lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
+learning_rate: 0.00005
 #min_lr: 0.00002
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
 #weight_decay: 0.00001 # FIXME
-warmup_steps: 200
-bf16: true # fp16 | bf16
+warmup_steps: 100
+bf16: true
 
 ### output
 output_dir: /home/exported
