--- a/sft.yaml
+++ b/sft.yaml
@@ -11,8 +11,8 @@ enable_liger_kernel: true # works with FSDP
 #upcast_layernorm: true # FSDP: Must flatten tensors with uniform dtype
 #upcast_lmhead_output: true
 
-gradient_checkpointing_kwargs:
-  use_reentrant: false
+#gradient_checkpointing_kwargs:
+#  use_reentrant: false
 
 ### resume if needed ?
 # ignore_data_skip: true
@@ -29,10 +29,11 @@ do_train: true
 finetuning_type: lora
 lora_target: all
 # additional_target: embed_tokens
-lora_rank: 96
-lora_alpha: 32
-lora_dropout: 0.0
-use_rslora: true
+lora_rank: 128
+lora_alpha: 128
+#lora_dropout: 0.0
+#use_rslora: true
+use_dora: true
 
 ### dataset
 dataset: x2
@@ -45,11 +46,11 @@ preprocessing_num_workers: 48
 ### train
 num_train_epochs: 1.0
 per_device_train_batch_size: 1
-gradient_accumulation_steps: 2
+gradient_accumulation_steps: 4
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.0001
+learning_rate: 0.00005
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-weight_decay: 0.001 # FIXME
+#weight_decay: 0.001 # FIXME
 warmup_steps: 100
 bf16: true
 
